# serialcaixianlin

./: .gitignore  Cargo.toml  README.md  flake.nix  sdkconfig.defaults
arduino-receive-test/: arduino-receive-test.ino  octafont-bold.h
src/: cli.rs  main.rs  packet.rs  queue.rs
src-old/: main_b.rs  main_c.rs
