cargo-features = ["per-package-target"]

[package]
name = "serialcaixianlin"
version = "0.1.0"
authors = ["Zebreus <zebreus@zebre.us>"]
edition = "2021"
rust-version = "1.82"
forced-target = "riscv32imc-esp-espidf"

[[bin]]
name = "serialcaixianlin"
harness = false           # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"

[profile.dev]
debug = true
opt-level = "z"
panic = "abort"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp32-nimble = "=0.8.0"
esp-idf-sys = "0.35.0"
esp-idf-hal = "0.44.1"
thiserror = "1.0.64"
anyhow = "1.0.93"
libc = "0.2.167"

[build-dependencies]
embuild = "0.32.0"
